--- a/color.ini
+++ b/color.ini
@@ -1,18 +1,18 @@
 [Base]
 
-main_fg                               = FFFFFF
-secondary_fg                          = 9898A6
-main_bg                               = 17171A
-sidebar_and_player_bg                 = 242528
-cover_overlay_and_shadow              = 000000
-indicator_fg_and_button_bg            = FFFFFF
-pressing_fg                           = 00FFFF
-slider_bg                             = 555753
-sidebar_indicator_and_hover_button_bg = 00FFFF
-scrollbar_fg_and_selected_row_bg      = 5A5A5A
-pressing_button_fg                    = F2EFEA
-pressing_button_bg                    = 525253
-selected_button                       = FFFFFF
-miscellaneous_bg                      = FFFFFF
-miscellaneous_hover_bg                = 00FFFF
-preserve_1                            = FFFFFF
+text               = FFFFFF
+subtext            = fcfcfc
+main               = 17171A
+sidebar            = 242528
+player             = 242528
+card               = 242528
+shadow             = 000000
+selected-row       = FFFFFF
+button             = FFFFFF
+button-active      = 00FFFF
+button-disabled    = 535353
+tab-active         = 242528
+notification       = 242528
+notification-error = cd0030
+misc               = BFBFBF
+
